--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,9 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring-cloud-starter-eureka.version>1.3.5.RELEASE</spring-cloud-starter-eureka.version>
-        <spring-cloud-starter-zuul.version>1.3.5.RELEASE</spring-cloud-starter-zuul.version>
-        <spring-cloud-config-server.version>1.3.3.RELEASE</spring-cloud-config-server.version>
+        <spring-cloud-eureka.version>1.3.5.RELEASE</spring-cloud-eureka.version>
+        <spring-cloud-zuul.version>1.3.5.RELEASE</spring-cloud-zuul.version>
+        <spring-cloud-config.version>1.3.3.RELEASE</spring-cloud-config.version>
         <spring-boot.version>1.5.9.RELEASE</spring-boot.version>
         <mysql.version>6.0.6</mysql.version>
         <jackson.version>2.9.2</jackson.version>
@@ -33,26 +33,32 @@
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-eureka-server</artifactId>
-                <version>${spring-cloud-starter-eureka.version}</version>
+                <version>${spring-cloud-eureka.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-eureka</artifactId>
-                <version>${spring-cloud-starter-eureka.version}</version>
+                <version>${spring-cloud-eureka.version}</version>
             </dependency>
 
             <!-- spring cloud config -->
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-config-server</artifactId>
-                <version>${spring-cloud-config-server.version}</version>
+                <version>${spring-cloud-config.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-config</artifactId>
+                <version>${spring-cloud-config.version}</version>
+            </dependency>
+
 
             <!-- spring cloud zuul -->
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-zuul</artifactId>
-                <version>${spring-cloud-starter-zuul.version}</version>
+                <version>${spring-cloud-zuul.version}</version>
             </dependency>
 
             <!-- spring boot -->
