--- a/pom.xml
+++ b/pom.xml
@@ -13,11 +13,13 @@
         <module>spring-cloud-config-server</module>
         <module>spring-cloud-zuul</module>
         <module>service-provider</module>
+        <module>service-consumer</module>
     </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring-cloud-eureka.version>1.3.5.RELEASE</spring-cloud-eureka.version>
+        <spring-cloud-ribbon.version>1.3.5.RELEASE</spring-cloud-ribbon.version>
         <spring-cloud-zuul.version>1.3.5.RELEASE</spring-cloud-zuul.version>
         <spring-cloud-config.version>1.3.3.RELEASE</spring-cloud-config.version>
         <spring-boot.version>1.5.9.RELEASE</spring-boot.version>
@@ -39,6 +41,13 @@
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-eureka</artifactId>
                 <version>${spring-cloud-eureka.version}</version>
+            </dependency>
+
+            <!-- spring cloud ribbon -->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-ribbon</artifactId>
+                <version>${spring-cloud-ribbon.version}</version>
             </dependency>
 
             <!-- spring cloud config -->
