--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <spring-cloud-eureka.version>1.3.5.RELEASE</spring-cloud-eureka.version>
         <spring-cloud-ribbon.version>1.3.5.RELEASE</spring-cloud-ribbon.version>
         <spring-cloud-zuul.version>1.3.5.RELEASE</spring-cloud-zuul.version>
+        <spring-cloud-hystrix.version>1.3.5.RELEASE</spring-cloud-hystrix.version>
         <spring-cloud-config.version>1.3.3.RELEASE</spring-cloud-config.version>
         <spring-boot.version>1.5.9.RELEASE</spring-boot.version>
         <mysql.version>6.0.6</mysql.version>
@@ -62,12 +63,18 @@
                 <version>${spring-cloud-config.version}</version>
             </dependency>
 
-
             <!-- spring cloud zuul -->
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-zuul</artifactId>
                 <version>${spring-cloud-zuul.version}</version>
+            </dependency>
+
+            <!-- spring cloud hystrix -->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-hystrix</artifactId>
+                <version>${spring-cloud-hystrix.version}</version>
             </dependency>
 
             <!-- spring boot -->
