--- a/pom.xml
+++ b/pom.xml
@@ -14,12 +14,14 @@
         <module>spring-cloud-zuul</module>
         <module>service-provider</module>
         <module>service-consumer</module>
+        <module>service-consumer-feign</module>
     </modules>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring-cloud-eureka.version>1.3.5.RELEASE</spring-cloud-eureka.version>
         <spring-cloud-ribbon.version>1.3.5.RELEASE</spring-cloud-ribbon.version>
+        <spring-cloud-feign.version>1.3.5.RELEASE</spring-cloud-feign.version>
         <spring-cloud-zuul.version>1.3.5.RELEASE</spring-cloud-zuul.version>
         <spring-cloud-config.version>1.3.3.RELEASE</spring-cloud-config.version>
         <spring-boot.version>1.5.9.RELEASE</spring-boot.version>
@@ -48,6 +50,13 @@
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-starter-ribbon</artifactId>
                 <version>${spring-cloud-ribbon.version}</version>
+            </dependency>
+
+            <!-- spring cloud feign -->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-feign</artifactId>
+                <version>${spring-cloud-feign.version}</version>
             </dependency>
 
             <!-- spring cloud config -->
