--- a/service-provider/src/main/resources/bootstrap.yml
+++ b/service-provider/src/main/resources/bootstrap.yml
@@ -13,4 +13,4 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://127.0.0.1:8600/eureka/
+      defaultZone: http://localhost:8600/eureka/
