--- a/pom.xml
+++ b/pom.xml
@@ -19,48 +19,44 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <spring-cloud-eureka.version>1.3.5.RELEASE</spring-cloud-eureka.version>
-        <spring-cloud-ribbon.version>1.3.5.RELEASE</spring-cloud-ribbon.version>
-        <spring-cloud-feign.version>1.3.5.RELEASE</spring-cloud-feign.version>
-        <spring-cloud-zuul.version>1.3.5.RELEASE</spring-cloud-zuul.version>
-        <spring-cloud-hystrix.version>1.3.5.RELEASE</spring-cloud-hystrix.version>
-        <spring-cloud-config.version>1.3.3.RELEASE</spring-cloud-config.version>
+        <spring-cloud.version>1.4.4.RELEASE</spring-cloud.version>
+        <spring-cloud-config.version>1.4.3.RELEASE</spring-cloud-config.version>
         <spring-boot.version>1.5.9.RELEASE</spring-boot.version>
         <mysql.version>6.0.6</mysql.version>
-        <jackson.version>2.9.2</jackson.version>
-        <lombok.version>1.16.18</lombok.version>
-        <httpclient.version>4.3.6</httpclient.version>
+        <jackson.version>2.9.5</jackson.version>
+        <lombok.version>1.18.0</lombok.version>
+        <httpclient.version>4.5.5</httpclient.version>
     </properties>
 
     <dependencyManagement>
         <dependencies>
-            <!-- spring cloud eureka -->
+            <!-- eureka -->
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-starter-eureka-server</artifactId>
-                <version>${spring-cloud-eureka.version}</version>
+                <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+                <version>${spring-cloud.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-starter-eureka</artifactId>
-                <version>${spring-cloud-eureka.version}</version>
-            </dependency>
-
-            <!-- spring cloud ribbon -->
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-starter-ribbon</artifactId>
-                <version>${spring-cloud-ribbon.version}</version>
+                <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+                <version>${spring-cloud.version}</version>
             </dependency>
 
-            <!-- spring cloud feign -->
+            <!-- ribbon -->
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-starter-feign</artifactId>
-                <version>${spring-cloud-feign.version}</version>
+                <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
+                <version>${spring-cloud.version}</version>
             </dependency>
 
-            <!-- spring cloud config -->
+            <!-- openfeign -->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-openfeign</artifactId>
+                <version>${spring-cloud.version}</version>
+            </dependency>
+
+            <!-- config -->
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-config-server</artifactId>
@@ -72,18 +68,25 @@
                 <version>${spring-cloud-config.version}</version>
             </dependency>
 
-            <!-- spring cloud zuul -->
+            <!-- zuul -->
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-starter-zuul</artifactId>
-                <version>${spring-cloud-zuul.version}</version>
+                <artifactId>spring-cloud-starter-netflix-zuul</artifactId>
+                <version>${spring-cloud.version}</version>
             </dependency>
 
-            <!-- spring cloud hystrix -->
+            <!-- hystrix -->
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-starter-hystrix</artifactId>
-                <version>${spring-cloud-hystrix.version}</version>
+                <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+                <version>${spring-cloud.version}</version>
+            </dependency>
+
+            <!-- turbine -->
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-netflix-turbine</artifactId>
+                <version>${spring-cloud.version}</version>
             </dependency>
 
             <!-- spring boot -->
@@ -94,27 +97,8 @@
             </dependency>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-data-jpa</artifactId>
-                <version>${spring-boot.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-actuator</artifactId>
                 <version>${spring-boot.version}</version>
-            </dependency>
-
-            <!-- mysql driver -->
-            <dependency>
-                <groupId>mysql</groupId>
-                <artifactId>mysql-connector-java</artifactId>
-                <version>${mysql.version}</version>
-            </dependency>
-
-            <!-- jackson -->
-            <dependency>
-                <groupId>com.fasterxml.jackson.datatype</groupId>
-                <artifactId>jackson-datatype-jsr310</artifactId>
-                <version>${jackson.version}</version>
             </dependency>
 
             <!-- lombok -->
