--- a/service-consumer/src/main/resources/application.yml
+++ b/service-consumer/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
 eureka:
   client:
     service-url:
-      defaultZone: http://127.0.0.1:8600/eureka/
+      defaultZone: http://localhost:8600/eureka/
 
 server:
   port: 8500
