--- a/spring-cloud-config-server/src/main/resources/application.yml
+++ b/spring-cloud-config-server/src/main/resources/application.yml
@@ -16,4 +16,4 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://127.0.0.1:8600/eureka/
+      defaultZone: http://localhost:8600/eureka/
