--- a/spring-cloud-eureka-server/src/main/resources/application.yml
+++ b/spring-cloud-eureka-server/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 eureka:
   instance:
-    hostname: 127.0.0.1
+    hostname: localhost
   client:
     register-with-eureka: false
     fetch-registry: false
